--- a/examples/montieCarloSimulation.ipynb
+++ b/examples/montieCarloSimulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,29 +12,27 @@
     "import numpy as np\n",
     "\n",
     "# Create a Monte Carlo simulation object\n",
-    "mc = mcs.MonteCarlo(0.05, 0.5, 1.5, np.random.RandomState(0))\n"
+    "mc = mcs.MonteCarlo(r=0.05, d=0.5, u=1.5, rng=np.random.RandomState(0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([100.        , 110.01658   , 121.04271   , 133.146     ,\n",
-       "       146.46614375, 161.106005  , 177.22056812, 194.95622859,\n",
-       "       214.45313578, 235.95468555])"
+       "122.71085386772155"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.mean(mc.simulatePathDependent(S0=100, T=10, M=10000000, p=0.6), axis=1)"
+    "np.mean(mc.simulatePathIndependent(S0=100, T=20, M=1000000, p=0.51))"
    ]
   }
  ],
