Corrected the Replicating Portfolio, single step algorthim.

--- a/examples/montieCarloSimulation.ipynb
+++ b/examples/montieCarloSimulation.ipynb
@@ -2,37 +2,68 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.insert(0, '../')\n",
     "import fsp.monteCarloSimulation as mcs\n",
-    "import numpy as np\n",
-    "\n",
-    "# Create a Monte Carlo simulation object\n",
-    "mc = mcs.MonteCarlo(r=0.05, d=0.5, u=1.5, rng=np.random.RandomState(0))"
+    "import fsp.BAPM as bapm\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p_tilde = 0.4444444444444444\n",
+      "p_tilde- = 0.2444444444444444\n",
+      "p_tilde+ = 0.6444444444444444\n",
+      "1.032\n",
+      "1.05\n",
+      "1.068\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a Monte Carlo simulation object\n",
+    "mc = mcs.MonteCarlo(r=0.25, d=0.50, u=2, rng=np.random.RandomState(0))\n",
+    "pc = bapm.probabilistic_analysis(r=0.05, d=1.01, u=1.1)\n",
+    "\n",
+    "p_tilde = bapm.BAPM.riskNeutralProbability(pc.r, pc.d, pc.u)\n",
+    "print('p_tilde =', p_tilde)\n",
+    "print('p_tilde- =', p_tilde-0.2)\n",
+    "print('p_tilde+ =', p_tilde+0.2)\n",
+    "\n",
+    "print(pc.pathIndependentExpectedValue(S0=1, T=1, p=p_tilde-0.2))\n",
+    "print(pc.pathIndependentExpectedValue(S0=1, T=1, p=p_tilde))\n",
+    "print(pc.pathIndependentExpectedValue(S0=1, T=1, p=p_tilde+0.2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "122.71085386772155"
+       "array([16.        ,  3.33333333])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.mean(mc.simulatePathIndependent(S0=100, T=20, M=1000000, p=0.51))"
+    "bapm.BAPM.singleStepReplicatingPortfolio(S0=4, u=2, d=0.5, r=0.25, VH=30, VL=10)"
    ]
   }
  ],
