--- a/examples/montieCarloSimulation.ipynb
+++ b/examples/montieCarloSimulation.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import sys\n",
     "sys.path.insert(0, '../')\n",
+    "sys.path.insert(0, '../fsp')\n",
     "import fsp.monteCarloSimulation as mcs\n",
     "import fsp.BAPM as bapm\n",
     "import numpy as np"
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +58,7 @@
        "array([16.        ,  3.33333333])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
