attempted to add multi time step, replicating portfolio, not really working

--- a/examples/montieCarloSimulation.ipynb
+++ b/examples/montieCarloSimulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -49,22 +49,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([16.        ,  3.33333333])"
+       "array([1.20000000e+00, 4.09091653e-06])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bapm.BAPM.singleStepReplicatingPortfolio(S0=4, u=2, d=0.5, r=0.25, VH=30, VL=10)"
+    "bapm.BAPM.singleStepReplicatingPortfolio(S0=488888, u=2, d=0.5, r=0.25, VH=3, VL=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2000000000000002"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bapm.BAPM.optionValueFromRiskNeutralMeasure(S0=4, u=2, d=0.5, r=0.25, VH=3, VL=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bapm.BAPM.multiStepReplicatingPortfolio(S0=4, u=2, d=0.5, r=0.25, M=50, VH=3, VL=0)"
    ]
   }
  ],
