--- a/examples/montieCarloSimulation.ipynb
+++ b/examples/montieCarloSimulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
       "p_tilde- = 0.2444444444444444\n",
       "p_tilde+ = 0.6444444444444444\n",
       "1.032\n",
-      "1.05\n",
+      "105.0\n",
       "1.068\n"
      ]
     }
@@ -43,68 +43,87 @@
     "print('p_tilde+ =', p_tilde+0.2)\n",
     "\n",
     "print(pc.pathIndependentExpectedValue(S0=1, T=1, p=p_tilde-0.2))\n",
-    "print(pc.pathIndependentExpectedValue(S0=1, T=1, p=p_tilde))\n",
+    "print(pc.pathIndependentExpectedValue(S0=100, T=1, p=p_tilde))\n",
     "print(pc.pathIndependentExpectedValue(S0=1, T=1, p=p_tilde+0.2))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1.20000000e+00, 4.09091653e-06])"
+       "array([121.,   1.])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bapm.BAPM.singleStepReplicatingPortfolio(S0=488888, u=2, d=0.5, r=0.25, VH=3, VL=0)"
+    "bapm.BAPM.singleStepReplicatingPortfolio(S0=121, u=1.1, d=1.01, r=0.05, VH=133.1, VL=122.21)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.2000000000000002"
+       "array([1.2, 0.5])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bapm.BAPM.optionValueFromRiskNeutralMeasure(S0=4, u=2, d=0.5, r=0.25, VH=3, VL=0)"
+    "bapm.BAPM.singleStepReplicatingPortfolio(S0=4, u=2, d=0.5, r=0.25, VH=3, VL=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t\t [1, 1]  :  16\n",
+      "\t\t [1, 0]  :  4.0\n",
+      "\t path:  [1]  :  4.4  :  0  :  0\n",
+      "\t path:  [1]  :  2 2 0.5 0.25 11 0\n",
+      "\t path:  [1]  V0:  4.4  D:  0.9166666666666666\n",
+      "\t\t [0, 1]  :  4.0\n",
+      "\t\t [0, 0]  :  1.0\n",
+      "\t path:  [0]  :  0.0  :  0  :  0\n",
+      "\t path:  [0]  :  0.5 2 0.5 0.25 0 0\n",
+      "\t path:  [0]  V0:  0.0  D:  -0.0\n",
+      " path:  []  :  1.7600000000000002  :  0.9166666666666666  :  -0.0\n",
+      " path:  []  :  1 2 0.5 0.25 4.4 0.0\n",
+      " path:  []  V0:  1.7600000000000002  D:  0.7333333333333334\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "1.2"
+       "(1.7600000000000002, 0.7333333333333334)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bapm.BAPM.multiStepReplicatingPortfolio(S0=4, u=2, d=0.5, r=0.25, M=50, VH=3, VL=0)"
+    "bapm.BAPM.multiStepReplicatingPortfolio(S0=4, u=2, d=0.5, r=0.25, M=2)"
    ]
   }
  ],
