done with q1 - minus the parts where I need to answer in english

--- a/examples/montieCarloSimulation.ipynb
+++ b/examples/montieCarloSimulation.ipynb
@@ -11,6 +11,7 @@
     "sys.path.insert(0, '../fsp')\n",
     "import fsp.monteCarloSimulation as mcs\n",
     "import fsp.BAPM as bapm\n",
+    "import fsp.bapm_exact as be\n",
     "import numpy as np"
    ]
   },
@@ -18,33 +19,19 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "p_tilde = 0.4444444444444444\n",
-      "p_tilde- = 0.2444444444444444\n",
-      "p_tilde+ = 0.6444444444444444\n",
-      "1.032\n",
-      "105.0\n",
-      "1.068\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Create a Monte Carlo simulation object\n",
-    "mc = mcs.MonteCarlo(r=0.25, d=0.50, u=2, rng=np.random.RandomState(0))\n",
-    "pc = bapm.probabilistic_analysis(r=0.05, d=1.01, u=1.1)\n",
+    "# Example from the notes\n",
+    "S0 = 4\n",
+    "K = 5\n",
+    "u = 2\n",
+    "d = 0.5\n",
+    "r = 0.25\n",
     "\n",
-    "p_tilde = bapm.BAPM.riskNeutralProbability(pc.r, pc.d, pc.u)\n",
-    "print('p_tilde =', p_tilde)\n",
-    "print('p_tilde- =', p_tilde-0.2)\n",
-    "print('p_tilde+ =', p_tilde+0.2)\n",
-    "\n",
-    "print(pc.pathIndependentExpectedValue(S0=1, T=1, p=p_tilde-0.2))\n",
-    "print(pc.pathIndependentExpectedValue(S0=100, T=1, p=p_tilde))\n",
-    "print(pc.pathIndependentExpectedValue(S0=1, T=1, p=p_tilde+0.2))\n"
+    "exp = be.bapm_exact(u, d, r, S0)\n",
+    "exp.setOption(True, True, K, 1)\n",
+    "assert(exp.stockPrice(3, 0) == S0 * d **3)\n",
+    "assert(exp.stockPrice(0, 3) == S0 * u **3)"
    ]
   },
   {
@@ -53,18 +40,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([121.,   1.])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "V0:  (1.76, 4.000000000000001)\n"
+     ]
     }
    ],
    "source": [
-    "bapm.BAPM.singleStepReplicatingPortfolio(S0=121, u=1.1, d=1.01, r=0.05, VH=133.1, VL=122.21)"
+    "V0 = exp.pathIndependentExpectedValue(2,exp.riskNeutralProbability())\n",
+    "print(\"V0: \", V0)\n"
    ]
   },
   {
@@ -73,18 +58,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([1.2, 0.5])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "V0:  [ 0. -0.]\n"
+     ]
     }
    ],
    "source": [
-    "bapm.BAPM.singleStepReplicatingPortfolio(S0=4, u=2, d=0.5, r=0.25, VH=3, VL=0)"
+    "V0 = exp.singleStepReplicatingPortfolio(0, 0)\n",
+    "print(\"V0: \", V0)"
    ]
   },
   {
@@ -93,28 +76,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\t\t [1, 1]  :  16\n",
-      "\t\t [1, 0]  :  4.0\n",
-      "\t path:  [1]  :  4.4  :  0  :  0\n",
-      "\t path:  [1]  :  2 2 0.5 0.25 11 0\n",
-      "\t path:  [1]  V0:  4.4  D:  0.9166666666666666\n",
-      "\t\t [0, 1]  :  4.0\n",
-      "\t\t [0, 0]  :  1.0\n",
-      "\t path:  [0]  :  0.0  :  0  :  0\n",
-      "\t path:  [0]  :  0.5 2 0.5 0.25 0 0\n",
-      "\t path:  [0]  V0:  0.0  D:  -0.0\n",
-      " path:  []  :  1.7600000000000002  :  0.9166666666666666  :  -0.0\n",
-      " path:  []  :  1 2 0.5 0.25 4.4 0.0\n",
-      " path:  []  V0:  1.7600000000000002  D:  0.7333333333333334\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "(1.7600000000000002, 0.7333333333333334)"
+       "[[0, 0], [0, 1], [1, 0], [1, 1]]"
       ]
      },
      "execution_count": 5,
@@ -123,8 +87,93 @@
     }
    ],
    "source": [
-    "bapm.BAPM.multiStepReplicatingPortfolio(S0=4, u=2, d=0.5, r=0.25, M=2)"
+    "maxPathLength = 4\n",
+    "exp.generateAllPaths(2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.7999999999999998, 0.19999999999999998, 1.8, -0.0, 0.5, 0.5, 4.0, None]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp.recursiveReplicatingPortfolio(3)\n",
+    "exp.replicatingDeltas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The deltas are not path independent. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "V0:  3.90314752053499 SN:  99.99999999999996\n",
+      "V0:  0.7690946873016783 SN:  91.71745411267206\n",
+      "V0:  9.934960622896158 SN:  108.87038735338368\n",
+      "V0:  3.903147520534992 Deltas (in a binary tree):  [0.5351893058945862, 0.35939112878877555, 0.8151458241899906, 0.16218839213783376, 0.6463260515911902, 0.6463260515911902, 1.1178744451598652, -0.0, 0.38317007642563233, 0.38317007642563233, 1.047982701352146, 0.38317007642563233, 1.047982701352146, 1.047982701352146, 1.3309999999999986, -0.0, -0.0, -0.0, 0.9052393055555565, -0.0, 0.9052393055555565, 0.9052393055555565, 1.34431, -0.0, 0.9052393055555565, 0.9052393055555565, 1.34431, 0.9052393055555565, 1.34431, 1.34431, 1.4640999999999977, None]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example from the notes\n",
+    "S0 = 100\n",
+    "u = 1.1\n",
+    "d = 1.01\n",
+    "r = 0.05\n",
+    "N = 5\n",
+    "K = (1+r)**N * S0\n",
+    "\n",
+    "\n",
+    "exp = be.bapm_exact(u, d, r, S0)\n",
+    "exp.setOption(True, True, K, N)\n",
+    "p_tilda = exp.riskNeutralProbability()\n",
+    "V0 = exp.pathIndependentExpectedValue(N, p_tilda)\n",
+    "print(\"V0: \", V0[0], \"SN: \", V0[1])\n",
+    "\n",
+    "V0 = exp.pathIndependentExpectedValue(N, p_tilda - 0.2)\n",
+    "print(\"V0: \", V0[0], \"SN: \", V0[1])\n",
+    "\n",
+    "V0 = exp.pathIndependentExpectedValue(N, p_tilda + 0.2)\n",
+    "print(\"V0: \", V0[0], \"SN: \", V0[1])\n",
+    "\n",
+    "V0 = exp.recursiveReplicatingPortfolio(N)\n",
+    "print(\"V0: \", V0[0], \"Deltas (in a binary tree): \", V0[1])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Monte Carlo\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
