--- a/examples/montieCarloSimulation.ipynb
+++ b/examples/montieCarloSimulation.ipynb
@@ -170,10 +170,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "simulatePathDependent() missing 1 required positional argument: 'p'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/jacob/code/ECE-478-FSP/FSP-Toolkit/examples/montieCarloSimulation.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jacob/code/ECE-478-FSP/FSP-Toolkit/examples/montieCarloSimulation.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m mc \u001b[39m=\u001b[39m mcs\u001b[39m.\u001b[39mMonteCarlo(r, d, u)\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jacob/code/ECE-478-FSP/FSP-Toolkit/examples/montieCarloSimulation.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m mc\u001b[39m.\u001b[39;49msimulatePathDependent(\u001b[39m100\u001b[39;49m, \u001b[39m5\u001b[39;49m, \u001b[39m32\u001b[39;49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: simulatePathDependent() missing 1 required positional argument: 'p'"
+     ]
+    }
+   ],
+   "source": [
+    "mc = mcs.MonteCarlo(r, d, u)\n",
+    "mc.simulatePathDependent(100, 5, 3)"
+   ]
   }
  ],
  "metadata": {
