--- a/examples/montieCarloSimulation.ipynb
+++ b/examples/montieCarloSimulation.ipynb
@@ -7,10 +7,10 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, '../')\n",
-    "sys.path.insert(0, '../fsp')\n",
-    "import fsp.monteCarloSimulation as mcs\n",
-    "import fsp.bapm_exact as be\n",
+    "sys.path.append(\"/home/jacob/code/ECE-478-FSP/FSP-Toolkit/fsp/\")\n",
+    "sys.path.append(\"../fsp/\")\n",
+    "import monteCarloSimulation as mcs\n",
+    "import bapm_exact as be\n",
     "import numpy as np"
    ]
   },
