--- a/examples/montieCarloSimulation.ipynb
+++ b/examples/montieCarloSimulation.ipynb
@@ -173,20 +173,20 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__init__() missing 1 required positional argument: 'S0'",
+     "ename": "ValueError",
+     "evalue": "Arbitrage detected",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/jacob/code/ECE-478-FSP/FSP-Toolkit/examples/montieCarloSimulation.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jacob/code/ECE-478-FSP/FSP-Toolkit/examples/montieCarloSimulation.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m mc \u001b[39m=\u001b[39m mcs\u001b[39m.\u001b[39;49mMonteCarlo(r, d, u)\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jacob/code/ECE-478-FSP/FSP-Toolkit/examples/montieCarloSimulation.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m mc\u001b[39m.\u001b[39msimulatePathDependent(\u001b[39m100\u001b[39m, \u001b[39m5\u001b[39m, \u001b[39m3\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'S0'"
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/jacob/code/ECE-478-FSP/FSP-Toolkit/examples/montieCarloSimulation.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jacob/code/ECE-478-FSP/FSP-Toolkit/examples/montieCarloSimulation.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m mc \u001b[39m=\u001b[39m mcs\u001b[39m.\u001b[39;49mMonteCarlo(r, d, u, \u001b[39m100\u001b[39;49m)\n",
+      "File \u001b[0;32m~/code/ECE-478-FSP/FSP-Toolkit/fsp/simulation.py:17\u001b[0m, in \u001b[0;36msimulation.__init__\u001b[0;34m(self, up_factor, down_factor, risk_free_rate, S0)\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mthe risk free rate must be greater than 0\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     16\u001b[0m \u001b[39mif\u001b[39;00m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39misArbitrage()):\n\u001b[0;32m---> 17\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mArbitrage detected\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     19\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n",
+      "\u001b[0;31mValueError\u001b[0m: Arbitrage detected"
      ]
     }
    ],
    "source": [
-    "mc = mcs.MonteCarlo(r, d, u)\n",
-    "mc.simulatePathDependent(100, 5, 3)"
+    "mc = mcs.MonteCarlo(r, d, u, 100)\n"
    ]
   }
  ],
