margin work on monte carlo

--- a/examples/montieCarloSimulation.ipynb
+++ b/examples/montieCarloSimulation.ipynb
@@ -6,9 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"/home/jacob/code/ECE-478-FSP/FSP-Toolkit/fsp/\")\n",
-    "sys.path.append(\"../fsp/\")\n",
+    "import sys \n",
+    "sys.path.append('../fsp')\n",
     "import monteCarloSimulation as mcs\n",
     "import bapm_exact as be\n",
     "import numpy as np"
@@ -42,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "V0:  (1.76, 4.000000000000001)\n"
+      "V0:  (array([1.76]), 4.000000000000001)\n"
      ]
     }
    ],
@@ -98,7 +97,14 @@
     {
      "data": {
       "text/plain": [
-       "[0.7999999999999998, 0.19999999999999998, 1.8, -0.0, 0.5, 0.5, 4.0, None]"
+       "[array([0.8]),\n",
+       " array([0.2]),\n",
+       " array([1.8]),\n",
+       " array([-0.]),\n",
+       " array([0.5]),\n",
+       " array([0.5]),\n",
+       " array([4.]),\n",
+       " None]"
       ]
      },
      "execution_count": 6,
@@ -127,10 +133,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "V0:  3.90314752053499 SN:  99.99999999999996\n",
-      "V0:  0.7690946873016783 SN:  91.71745411267206\n",
-      "V0:  9.934960622896158 SN:  108.87038735338368\n",
-      "V0:  3.903147520534992 Deltas (in a binary tree):  [0.5351893058945862, 0.35939112878877555, 0.8151458241899906, 0.16218839213783376, 0.6463260515911902, 0.6463260515911902, 1.1178744451598652, -0.0, 0.38317007642563233, 0.38317007642563233, 1.047982701352146, 0.38317007642563233, 1.047982701352146, 1.047982701352146, 1.3309999999999986, -0.0, -0.0, -0.0, 0.9052393055555565, -0.0, 0.9052393055555565, 0.9052393055555565, 1.34431, -0.0, 0.9052393055555565, 0.9052393055555565, 1.34431, 0.9052393055555565, 1.34431, 1.34431, 1.4640999999999977, None]\n"
+      "V0:  [3.90314752] SN:  99.99999999999996\n",
+      "V0:  [0.76909469] SN:  91.71745411267206\n",
+      "V0:  [9.93496062] SN:  108.87038735338368\n",
+      "V0:  [3.90314752] Deltas (in a binary tree):  [array([0.53518931]), array([0.35939113]), array([0.81514582]), array([0.16218839]), array([0.64632605]), array([0.64632605]), array([1.11787445]), array([-0.]), array([0.38317008]), array([0.38317008]), array([1.0479827]), array([0.38317008]), array([1.0479827]), array([1.0479827]), array([1.331]), array([-0.]), array([-0.]), array([-0.]), array([0.90523931]), array([-0.]), array([0.90523931]), array([0.90523931]), array([1.34431]), array([-0.]), array([0.90523931]), array([0.90523931]), array([1.34431]), array([0.90523931]), array([1.34431]), array([1.34431]), array([1.4641]), None]\n"
      ]
     }
    ],
@@ -173,20 +179,30 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Arbitrage detected",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/home/jacob/code/ECE-478-FSP/FSP-Toolkit/examples/montieCarloSimulation.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jacob/code/ECE-478-FSP/FSP-Toolkit/examples/montieCarloSimulation.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m mc \u001b[39m=\u001b[39m mcs\u001b[39m.\u001b[39;49mMonteCarlo(r, d, u, \u001b[39m100\u001b[39;49m)\n",
-      "File \u001b[0;32m~/code/ECE-478-FSP/FSP-Toolkit/fsp/simulation.py:17\u001b[0m, in \u001b[0;36msimulation.__init__\u001b[0;34m(self, up_factor, down_factor, risk_free_rate, S0)\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mthe risk free rate must be greater than 0\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     16\u001b[0m \u001b[39mif\u001b[39;00m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39misArbitrage()):\n\u001b[0;32m---> 17\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mArbitrage detected\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     19\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n",
-      "\u001b[0;31mValueError\u001b[0m: Arbitrage detected"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4444444444444444\n",
+      "0.44426775\n",
+      "V0:  3.8979751820437403 SN:  115.86322669297357\n"
      ]
     }
    ],
    "source": [
-    "mc = mcs.MonteCarlo(r, d, u, 100)\n"
+    "S0 = 100\n",
+    "u = 1.1\n",
+    "d = 1.01\n",
+    "r = 0.05\n",
+    "N = 5\n",
+    "K = (1+r)**N * S0\n",
+    "\n",
+    "\n",
+    "mc = mcs.MonteCarlo(up_factor=u, down_factor=d, risk_free_rate=r, S0=100)\n",
+    "mc.setOption(True, True, K, N)\n",
+    "mc.setRNG(np.random.seed(22))\n",
+    "print(p_tilda)\n",
+    "S, V = mc.simulatePathDependent(100, 5, 3200000, p_tilda)\n",
+    "print(\"V0: \", np.mean(V), \"SN: \", np.mean(S[1]))\n"
    ]
   }
  ],
