--- a/examples/Cox-Ingersoll-RossInterestRateModel.ipynb
+++ b/examples/Cox-Ingersoll-RossInterestRateModel.ipynb
@@ -200,11 +200,11 @@
     "r = 0.05\n",
     "\n",
     "def Beta_log(x : float) -> float:\n",
-    "    # return (1/np.log(x)) * (alpha - (np.log(x) * beta)) + (1/np.log(x)**2) * (1/2) * (sigma * np.log(x/2))**2\n",
-    "    return  (1/x * (alpha - beta * x) + 0.5 * (-1 / x**2) * sigma**2 * x)\n",
+    "    return (1/np.log(x)) * (alpha - (np.log(x) * beta)) + (1/np.log(x)**2) * (1/2) * (sigma * np.log(x/2))**2\n",
+    "    # return  (1/x * (alpha - beta * x) + 0.5 * (-1 / x**2) * sigma**2 * x)\n",
     "def Gamma_log(x : float) -> float:\n",
-    "    # return (1/np.log(x)) * (sigma * np.log(x/2))\n",
-    "    return 1/x * sigma\n",
+    "    return (1/np.log(x)) * (sigma * np.log(x/2))\n",
+    "    # return 1/x * sigma\n",
     "fig, ax = plt.subplots()\n",
     "\n",
     "cir = stochCalc.SDE(X0=r, lambda_t=0.01, N=10, Beta=Beta_log, Gamma=Gamma_log)\n",
